# rtc-tools-heat-network

./: .gitattributes  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  MANIFEST.in  README.md  dev-requirements.txt  df_CHESS_postProc.pkl  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: BuildTest_win32.yml  ci.yml  codeql-analysis.yml  container_image.yml  release.yml
Toy_model/rtc_DW_linearization/model/: HeatDemand.mo  Pipe.mo  QTHBufferPort.mo
Toy_model/rtc_DW_linearization/src/: DW_linearization_functions.py  example.py
Validation/src/: input.yml
ci/linux/: build_python_package.sh  create_venv.sh  lint.sh  test_unit.sh  typecheck.sh  update_dependencies.sh
ci/win32/: lint.cmd  test_unit.cmd  typecheck.cmd  update_dependencies.cmd
doc/dev_documentation/: Tools.rst  conf.py  index.rst
doc/user_documentation/: conf.py  index.rst
docs/: bibliography.rst  conf.py  getting-started.rst  index.rst  references.bib  requirements.txt  support.rst
docs-old/: conf.py  python-api.rst  support.rst
docs-old/theory/: heat_loss.rst  introduction.rst
docs/examples/: index.rst
docs/theory/: Validation_pipe_diameter_sizing.rst  approach.rst  code_structure.rst  index.rst  introduction.rst  pipe_classes.rst
examples/: how_to_run_rtc-tools.txt
examples/PoCTutorial_optimizer/: Demo_areas with return network.esdl  Demo_areas with return network_GrowOptimized.esdl  Demo_areas.esdl  Demo_areas_start.esdl  PoC Tutorial_1source.esdl  PoC Tutorial_1source_GrowOptimized.esdl  PoC Tutorial_1source_enabled.esdl  PoC Tutorial_1source_enabled_GrowOptimized.esdl  PoC Tutorial_2sources.esdl  PoC Tutorial_2sources_GrowOptimized.esdl  PoC Tutorial_2sources_pipesizing.esdl  PoC Tutorial_2sources_pipesizing_GrowOptimized.esdl  PoC Tutorial_2sources_storage with return network.esdl  PoC Tutorial_2sources_storage with return network_GrowOptimized.esdl
examples/test_case_small_network_with_ates/: runinfo.xml
src/mesido/: _darcy_weisbach.py  _heat_loss_u_values_pipe.py  _version.py  asset_sizing_mixin.py  component_type_mixin.py  demand_insulation_class.py  electricity_physics_mixin.py  financial_mixin.py  gas_physics_mixin.py  head_loss_class.py  heat_network_common.py  heat_physics_mixin.py  physics_mixin.py  pipe_class.py  techno_economic_mixin.py  topology.py
src/rtctools_heat_network/: _darcy_weisbach.py  _heat_loss_u_values_pipe.py  _version.py  asset_sizing_mixin.py  base_component_type_mixin.py  bounds_to_pipe_flow_directions_mixin.py  component_type_mixin.py  constants.py  control_variables.py  demand_insulation_class.py  electricity_physics_mixin.py  financial_mixin.py  gas_physics_mixin.py  head_loss_class.py  head_loss_mixin.py  heat_mixin.py  heat_network_common.py  heat_network_mixin.py  heat_physics_mixin.py  modelica_component_type_mixin.py  network_common.py  physics_mixin.py  pipe_class.py  qth_loop_mixin.py  qth_mixin.py  techno_economic_mixin.py  topology.py  util.py
tests/: Functionality_test_matrix.xlsx  README.txt  test_absolute_heat.py  test_asset_is_realized.py  test_ates.py  test_buffer.py  test_cable_topology_optimization.py  test_cold_demand.py  test_electric_bus.py  test_electric_source_sink.py  test_electrolyzer.py  test_end_scenario_sizing.py  test_end_scenario_sizing__modified.py  test_end_scenario_sizing_annualized.py  test_esdl_parsing.py  test_esdl_pycml.py  test_examples.py  test_gas_multi_demand_source_node.py  test_gas_pipe_topology_optimization.py  test_gas_source_sink.py  test_head_loss.py  test_head_loss_class.py  test_head_loss_mixin.py  test_heat.py  test_heat_loss_u_values.py  test_hydraulic_power.py  test_insulation.py  test_max_size_and_optional_assets.py  test_multicommodity.py  test_multiple_carriers.py  test_multiple_in_and_out_port_components.py  test_network_simulator.py  test_pipe_diameter_sizing.py  test_producer_profiles.py  test_profile_parsing.py  test_pycml.py  test_pycml_modelica.py  test_qth.py  test_qth_loop.py  test_setpoint_constraints.py  (+5 more)
tests/pycml/: test_pycml_modelica.py
tests/qth_test_not_maintained/: test_qth.py  test_qth_loop.py
(+546 files in other folders)
