[metadata]
license_file = COPYING.LESSER

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = src/mesido/_version.py
versionfile_build = mesido/_version.py
tag_prefix =
parentdir_prefix = mesido-


[flake8]
max-line-length = 100
ignore =
    # Suggestion to use dict() over {}
    C408,
    # Space before colon (not PEP-8 compliant, and conflicts with black)
    E203,
    # Starting lines with operators. We prefer it this way actually.
    W503
